third_party/move/move-compiler-v2/tests/checking/typing/lambda_typed_widen.exp

Diagnostics:
error: the function takes `&mut` but `&` was provided
   ┌─ tests/checking/typing/lambda_typed_widen.move:34:37
   │
34 │         let r = use_imm_ref(&mut v, |x: &mut u64| *x);
   │                                     ^^^^^^^^^^^^^^^^

error: the function takes `&mut` but `&` was provided
   ┌─ tests/checking/typing/lambda_typed_widen.move:49:37
   │
49 │         let r = use_imm_ref(&mut v, |x| *(freeze(x)));
   │                                     ^^^^^^^^^^^^^^^^
